--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Yogesh</title>
 </head>
 <body>
-    <h1>Welcome to the Arjun college</h1>
+    <h1 style="background-color: azure : blanchedalmond:10PX;">Welcome to the Arjun college</h1>
 </body>
 </html>
