--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1 style="background-color: azure : blanchedalmond:10PX;">Welcome to the Arjun college</h1>
+    <hr>
+    <marquee>Hii Buddies</marquee>
+    <hr>
 </body>
 </html>
